New partners added

--- a/index.html
+++ b/index.html
@@ -31,11 +31,20 @@
     <div id="about-company-container">
         <h1 id="about-company-title">О нас</h1>
         <img id="about-company-logo" src="media/logo-main.png" alt="Лого Солодок">
-        <p class="about-company-txt">ООО "Солодок" имеет эксклюзивное право на продажу кормов <a
-                href="https://grand-aqua.com/" target="_blank">Grand Group For Fish
-                Feed Manufacturing</a> на территории Российской Федерации.</p>
+        <p class="about-company-txt">ООО «Солодок» имеет эксклюзивное право на продажу кормов <a
+                href="https://grand-aqua.com/" target="_blank"><b>«Grand Group For Fish
+                Feed Manufacturing»</b></a> на территории Российской Федерации.</p>
         <div id="about-company-video-container"><iframe id="about-company-video"
-                src="https://www.youtube.com/embed/soDokw2t2Wg" allow="fullscreen;"></iframe></div>
+                src="https://www.youtube.com/embed/soDokw2t2Wg" allow="fullscreen"></iframe></div>
+        <h2 class="about-company-partners">Другие партнеры</h2>
+        <p class="about-company-txt">ООО «Солодок» также предлагает экструдированные продукционные корма для форели от
+            армянского производителя <a href="https://modusgranum.am/" target="_blank"><b>«Модус Гранум»</b></a>. Завод
+            производит корма для аквакультуры по швейцарской технологии,
+            используя сырье лучших мировых производителей.</p>
+        <p class="about-company-txt">Также готовы поставить корма для форели от производителя ООО
+            <b>«Русмодус-Фид»</b> (Беслан).</p>
+        <p class="about-company-txt">Наша компания имеет прямые договора и квоты на объемы продукции с данными
+            производителями кормов.</p>
     </div>
     <div id="details-container">
         <div id="details-content">
