--- a/products.html
+++ b/products.html
@@ -50,6 +50,11 @@
             <p class="products-file-mobile">Ваш браузер не имеет подходящего PDF-плагина для просмотра данного файла. Вместо этого вы
                 можете <a href="media/file2.pdf">скачать файл по ссылке</a>
             </p>
+            <h3 class="products-file-name">Корма «Модус Гранум»</h3>
+            <object class="products-file-pc" data="media/file3.pdf" type="application/pdf"></object>
+            <p class="products-file-mobile">Ваш браузер не имеет подходящего PDF-плагина для просмотра данного файла. Вместо этого вы
+                можете <a href="media/file3.pdf">скачать файл по ссылке</a>
+            </p>
         </div>
     </div>
     <footer>
