Quotation marks updated

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             </div>
         </div>
         <div id="copyright">
-            <p>© Copyright 2023 | ООО "Солодок"</p>
+            <p>© Copyright 2023 | ООО «Солодок»</p>
         </div>
     </footer>
 </body>
