--- a/products.html
+++ b/products.html
@@ -80,7 +80,7 @@
             </div>
         </div>
         <div id="copyright">
-            <p>© Copyright 2023 | ООО "Солодок"</p>
+            <p>© Copyright 2023 | ООО «Солодок»</p>
         </div>
     </footer>
 </body>
