--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Главная | ООО "Солодок"</title>
+    <title>Главная | ООО «Солодок»</title>
     <link rel="stylesheet" href="styles.css">
     <meta name="description" content="ООО Солодок - Главная">
     <meta name="keywords"
