--- a/quality.html
+++ b/quality.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Контроль качества | ООО "Солодок"</title>
+    <title>Контроль качества | ООО «Солодок»</title>
     <link rel="stylesheet" href="styles.css">
     <meta name="description" content="ООО Солодок - Контроль качества">
     <meta name="keywords" content="Solodok, LLC, MFRR, Grand, Fish, Feed, Trout, ООО, Солодок, МФРР, Гранд, Корм, Рыба, Форель, Quality, Control, Контроль, Качество">
